@@ -1,3 +1,12 @@
+2016-12-13  Brady Eidson  <beidson@apple.com>
+
+        Add a PerfTest targeting IDBIndex.get().
+        https://bugs.webkit.org/show_bug.cgi?id=165803
+
+        Reviewed by Alex Christensen.
+
+        * IndexedDB/index-get.html: Added.
+
 2016-12-12  Brady Eidson  <beidson@apple.com>
 
         More IndexedDB perf tests.
